--- a/1_Arreglo_PM_DAP_estimacion_Alvarez/ArregloPMyDAP.ipynb
+++ b/1_Arreglo_PM_DAP_estimacion_Alvarez/ArregloPMyDAP.ipynb
@@ -9,7 +9,7 @@
     "# Generacion datos para modelo de MP vs Area y estimación de Biomasa foliar\n",
     "\n",
     "Se depuran los datos de material particulado(MP) y se agregan con los de area(en este caso area se entiende por la\n",
-    "area que se le midió a las hojas a las que se le midio el MP). Tambien se depuran datos de diametro altura del \n",
+    "area que se le midió a las hojas a las que se le midio el MP). Tambien se depuran datos de diametro a altura del \n",
     "pecho(DAP) con los que directamente se hace la estimacion de Biomasa foliar en base al modelo de alvarez:\n",
     "\n",
     "> $B_f=\\ln(\\beta_1+\\beta_0DAP) $\n",
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {
     "id": "6mUIxpG0x0E7"
    },
@@ -71,12 +71,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {
     "id": "O8r1Pt8dqAAV",
-    "jupyter": {
-     "source_hidden": true
-    },
     "tags": []
    },
    "outputs": [],
@@ -131,7 +128,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {
     "jupyter": {
      "source_hidden": true
@@ -207,7 +204,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 7,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -4650,7 +4647,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.4"
+   "version": "3.9.5"
   }
  },
  "nbformat": 4,
