--- a/2_Modelos_Area_biomasa/Arrreglo_Hojas_Area_Biomasa.ipynb
+++ b/2_Modelos_Area_biomasa/Arrreglo_Hojas_Area_Biomasa.ipynb
@@ -64,14 +64,13 @@
     }
    ],
    "source": [
-    "\n",
     "import pandas as pd\n",
     "import statsmodels.api as sm\n",
     "from statsmodels.formula.api import ols\n",
     "import seaborn as sns\n",
     "import matplotlib.pyplot as plt\n",
     "import numpy as np\n",
-    "from scipy import stats\n"
+    "from scipy import stats"
    ]
   },
   {
@@ -2343,7 +2342,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.4"
+   "version": "3.9.5"
   }
  },
  "nbformat": 4,
