--- a/3_Modelo_de_MP/Modelo_PM_vs_Area.rmd
+++ b/3_Modelo_de_MP/Modelo_PM_vs_Area.rmd
@@ -13,13 +13,18 @@ library(lmtest)
 library(readxl)
 library(gvlma)
 library(ggplot2)
+library(orcutt)
+library(tidyr)
+library(broom)
 ```
 
 Luego se importan los datos para el modelo, depurados previamente en el notebook de la carpeta "1_Arreglo_PM_DAP_estimacion_Alvarez":
 
 ```{r}
 path_data<-"../data/Datos_para_modelo/Datos_MP_BiomasaEst_Altura.xlsx"
+path_data2<-"../data/Datos_para_modelo/Datos_MP_BiomasaEst_Altura.csv"
 model_data <- read_excel(path_data)
+model_data2<- read.csv(path_data2,sep = ';')
 ```
 
 Se empieza con la creacion de los modelos, se define un vector con datos a eliminar por tener efectos muy fuertes sobre 
@@ -27,14 +32,28 @@ el modelo lineal. Los datos eliminados aplican para los 2 modelos.
 
 ```{r}
 to_eliminate <- c(62)
+model_data3<-model_data[-to_eliminate,]
+
+# Separattion by / and - points and comass for numbers, replace , by .
 
 modelo_25=lm(log(Material_2.5) ~ log(Area) + Tipo_Hoja + 0, data=model_data[-to_eliminate,])#[-c(61,62,32,168,242),])
+reg2<-cochrane.orcutt(modelo_25)
+summary(reg2)
+bptest(reg2)
+#anova(tidy(reg2))
+#cbind(model_data[-to_eliminate,],rbind(NA,model.frame(reg2))) #The Anova doesnt work bc some data was used to make the transformation
+#anova(reg2)
+gvlma(reg2)
+shapiro.test(reg2$residuals)
+
+```
+```{r}
 summary(modelo_25)
+shapiro.test(modelo_25$residuals)
 anova(modelo_25)
 plot(modelo_25)
-#gvlma(modelo_25)
-shapiro.test(modelo_25$residuals)
 bptest(modelo_25)
+#gvlma(modelo_25)
 ```
 
 
