Reestructuration for R workflow

--- a/1_Arreglo_PM_DAP_estimacion_Alvarez/ArregloPMyDAP.ipynb
+++ b/1_Arreglo_PM_DAP_estimacion_Alvarez/ArregloPMyDAP.ipynb
@@ -116,19 +116,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#math.exp( 7.6109 + 0.0643 * 39/100*(math.pi))\n",
-    "\n",
-    "\n",
-    "#databiomas['BiomasaEstimada_2']=databiomas['Diametro'].apply(lambda x : math.exp( 7.6109 + 0.0643 * x/(math.pi) ))\n",
-    "#databiomas.loc[0,\"BiomasaEstimada\"]"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {
     "id": "s5w7vp1K9PP4"
@@ -141,7 +128,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {
     "jupyter": {
      "source_hidden": true
@@ -217,7 +204,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -468,7 +455,9 @@
     "data, databiomas, dataEsp = trabajo(data,tipohojaDict, data_areas)\n",
     "\n",
     "path_out=\"../data/Datos_para_modelo/Datos_MP_BiomasaEst_Altura.xlsx\"\n",
-    "data.to_excel(path_out,index=False)"
+    "data.to_excel(path_out,index=False)\n",
+    "path_out=\"../data/Datos_para_modelo/Datos_MP_BiomasaEst_Altura.csv\"\n",
+    "data.to_csv(path_out,index=False)\n"
    ]
   },
   {
@@ -482,7 +471,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {
     "tags": []
    },
