--- a/2_Estimacion_modelacion_R/materialParticulado.Rmd
+++ b/2_Estimacion_modelacion_R/materialParticulado.Rmd
@@ -37,8 +37,8 @@ vaciosDiametro <-dataDiametros[is.na(dataDiametros$Diametro),] # Empty records
 
 La función suma la biomasa estimada sobre los diametros de cada registro. La función a utilizar es
 $$B=e^{7.6109+0.0643\cdot(diametro/pi)}$$
-
-```{r}
+#####This chunk is already done in python so nno need to run
+#```{r}
 Biomasa <- function(diametro) {
   Biomasa <- exp(7.6109+0.0643*diametro/pi)
   return(Biomasa)
@@ -54,7 +54,7 @@ for (j in 1:length(Diametro)){
 }
 
 dataDiametros$Biomasa<-Bestimated # Biomasa en gramos
-```
+#```
 
 # Graficas: Boxplot MP 2.5 capturado por especie
 
@@ -62,11 +62,11 @@ dataDiametros$Biomasa<-Bestimated # Biomasa en gramos
 dataDiametros$MP2.5area <- dataDiametros$Material_2.5/dataDiametros$Area
 
 # Ordenar especies segun Mediana del MP 2.5
-aux <- aggregate(MP2.5area ~ Nombre.com.n, dataDiametros, median, na.action = na.omit)
+aux <- aggregate(MP2.5area ~ Nombre.común, dataDiametros, median, na.action = na.omit)
 Namesmax2.5 <- head(aux[order(-aux$MP2.5area),],9)
-data2 <- dataDiametros[Nombre.com.n %in% Namesmax2.5$Nombre.com.n, ]
+data2 <- dataDiametros[Nombre.común %in% Namesmax2.5$Nombre.común, ]
 
-box_plot_25p <-ggplot(data2 ,aes(x = data2$Nombre.com.n, y=data2$MP2.5area,fill=data2$Nombre.com.n))+ 
+box_plot_25p <-ggplot(data2 ,aes(x = data2$Nombre.común, y=data2$MP2.5area,fill=data2$Nombre.común))+ 
     geom_boxplot() +
     theme(panel.background = element_rect(fill = "transparent"),
           panel.grid.major = element_blank(),
@@ -88,11 +88,11 @@ box_plot_25p
 ```{r}
 # Ordenar especies segun Mediana del MP 10
 dataDiametros$MP10area <- dataDiametros$Material_10/dataDiametros$Area
-aux <- aggregate(MP10area ~ Nombre.com.n, dataDiametros, median, na.action=na.omit)
+aux <- aggregate(MP10area ~ Nombre.común, dataDiametros, median, na.action=na.omit)
 Namesmax10 <- head(aux[order(-aux$MP10area),],9)
-data2 <- dataDiametros[Nombre.com.n %in% Namesmax10$Nombre.com.n, ]
+data2 <- dataDiametros[Nombre.común %in% Namesmax10$Nombre.común, ]
 
-box_plot_10p <-ggplot(data2 ,aes(x = data2$Nombre.com.n, y=data2$MP10area,fill=data2$Nombre.com.n))+ 
+box_plot_10p <-ggplot(data2 ,aes(x = data2$Nombre.común, y=data2$MP10area,fill=data2$Nombre.común))+ 
     geom_boxplot() +
     theme(panel.background = element_rect(fill = "transparent"),
           panel.grid.major = element_blank(),
@@ -158,6 +158,31 @@ pAreasclean
 
 summary(Area)
 
+
+```
+prediccion de area foliar
+
+```{r}
+newdata <- data.frame(one_stuff = c("jaja","jeje"), Biomasa_g = c(0.2,0.0001), other_stuff = c(345,355))
+
+#test_model <- lm(Area ~ Biomasa_g,data = dataAreasclean[["Abarco"]])
+#test_model
+#predictions <- predict.lm(test_model,newdata)
+
+
+#predictions <- predict.lm(modelArea[[1]],newdata)
+newdata$pred_area <- predict.lm(modelArea[[1]],newdata)
+test <- setNames(modelArea,rownames(dataAreasclean))
+
+predict_vals <- function(df){
+  species <- unique(dataDiametros$Nombre.común)
+  df$pred_area <- predict.lm(modelArea[[species]],df)
+  return(df)
+}
+
+predicted_area <- by(dataDiametros, dataDiametros$Nombre.común, function(df) predict_vals(df))
+
+## Toca que "modelArea" este definido globalmente y que tenga indexado los nombres la especie correspondiente
 
 ```
 
@@ -234,4 +259,21 @@ regglm$coefficients
 modelo_10$coefficients
 
 ```
+```{r}
+###Unite the models of Are and particulate material
+# getting all the unique pairs of Nombre común and Tipo_Hoja
+ans = unique(dataDiametros[,c('Nombre.común','Tipo_Hoja')])
+# sample dataframe tha is the input
+samples<- data.frame('Nombre.común'=c('Abarco','Aguacatillo'),'Area'=c(123,324))
 
+mergedAreas<-merge(x = samples, y =ans , by="Nombre.común")
+mergedAreas$MP10_tot<-predict(modelo_10, newdata = mergedAreas)
+mergedAreas$MP2.5tot<-predict(regglm , newdata = mergedAreas)
+mergedAreas
+
+#verification
+intercepto <- summary(modelo_10)$coefficients[1,1]
+pendiente <- summary(modelo_10)$coefficients[2,1]
+HojaSimplefac <- summary(modelo_10)$coefficients[9,1]
+print(c(mergedAreas$MP10_tot[1],(log(mergedAreas$Area[1])*pendiente+intercepto+HojaSimplefac)))
+```
