Error estimation manual merge

--- a/2_Estimacion_modelacion_R/materialParticulado.Rmd
+++ b/2_Estimacion_modelacion_R/materialParticulado.Rmd
@@ -162,6 +162,7 @@ pAreasclean
 summary(Area)
 
 
+
 ```
 Prediccion de area foliar por individuo desde la estimacion de biomasa foliar. Es de notar que hay 4 arboles para los que no se tiene un modelo de area foliar por biomasa por lo que esas especies no tienen prediccion, almenos de momento
 
@@ -270,8 +271,36 @@ for (j in 1:length(predicted_area)){
   }
 }
 #Se borra la primera fila que estaria duplicada
-d <- d[-c(1),] 
+d <- d[-c(1),]
+```
 
+Area error
+
+```{r}
+
+# dtaa frame for the coeffiecientsand thir standard error
+add<-coefficientsArea[[1]][1,]
+add$'Nombre.común'<-rownames(dataAreasclean)[1]
+add$'tipo'<-'intercepto'
+coeffarea<-data.frame(add)
+add2<-coefficientsArea[[1]][2,]
+add2$'Nombre.común'<-rownames(dataAreasclean)[1]
+add2$'tipo'<-'pendiente'
+add2<-data.frame(add2)
+coeffarea<-rbind(coeffarea,add2)
+for (j in 2:length(coefficientsArea)){
+    add<-coefficientsArea[[j]][1,]
+    add$'Nombre.común'<-rownames(dataAreasclean)[j]
+    add$'tipo'<-'intercepto'
+    add<-data.frame(add)
+    coeffarea<-rbind(coeffarea,add)
+    add2<-coefficientsArea[[j]][2,]
+    add2$'Nombre.común'<-rownames(dataAreasclean)[j]
+    add2$'tipo'<-'pendiente'
+    add2<-data.frame(add2)
+    coeffarea<-rbind(coeffarea,add2)
+}
+coeffarea 
 ```
 
 ```{r}
@@ -357,5 +386,128 @@ box_plot_10pred
 
 ```{r}
 #Error analysis of the total estimation
+
+### the next lines are to create a data base of the coefficients of tipo de Hoja and its standard error
+HojaMP10 <- tail(summary(modelo_10)$coefficients, n = 9)
+HojaMP10 <- data.frame(HojaMP10)
+Tipo_Hoja <- c()
+for(i in  3:length(rownames(summary(modelo_10)$coefficients))){
+  Tipo_Hoja<-c(Tipo_Hoja,strsplit(rownames(summary(modelo_10)$coefficients)[i],'Tipo_Hoja')[[1]][2])
+}
+Tipo_Hoja
+HojaMP10$Tipo_Hoja<-Tipo_Hoja
+rownames(HojaMP10)<-c()
+HojaMP10
+
+# missing the 2.5 coefficients
+HojaMP2.5<-tail(summary(MP2.5)$coefficients, n = 9)
+HojaMP2.5 <- data.frame(HojaMP2.5)
+Tipo_Hoja <- c()
+for(i in  3:length(rownames(summary(MP2.5)$coefficients))){
+  Tipo_Hoja<-c(Tipo_Hoja,strsplit(rownames(summary(MP2.5)$coefficients)[i],'Tipo_Hoja')[[1]][2])
+}
+Tipo_Hoja
+HojaMP2.5$Tipo_Hoja<-Tipo_Hoja
+rownames(HojaMP2.5)<-c()
+HojaMP2.5
+```
+
+# El modelo final queda por tanto de la forma siguiente a la cual se le va a hacer propagación del error
+donde MP está en gramos y el DAP en centimetros queda:
+
+$$MP =[a_e*e^{k_1 DAP+k_2}+b_e]^a+c$$
+donde c es el intercepto del modelo 10 o MP2.5y a la pendiente
+
+```{r}
+#Hoja is the dataframe of the std arror and coefficients of each Tipo_Hoja
+dHoja0<-summary(modelo_10)$coefficients[3,2]# instead of 3 it depends on the type of Hoja
+dHoja <-(dHoja0*exp( summary(modelo_10)$coefficients[3,1]))/0.434
+
+#Dataframe with only what i need
+#coeffarea is the dataframe that has the standard deviation of each specie and its respective coefficient
+coearea<- coeffarea[c(1,2)]
+coearea$tipo<- coeffarea$tipo
+coearea$Nombre.común<- coeffarea$Nombre.común
+#Separate in two dataframes the intercept and the slope
+pendientearea <- subset(coearea, tipo=='pendiente')
+interceparea <-subset(coearea, tipo=='intercepto')
+
+interceptarea<-interceparea[c(1,2)]
+interceptarea$Nombre.común<-interceparea$Nombre.común
+colnames(interceptarea)<-c('b_e','db_e','Nombre.común')
+
+pendientarea<-pendientearea[c(1,2)]
+pendientarea$Nombre.común<-interceparea$Nombre.común
+colnames(pendientarea)<-c('a_e','da_e','Nombre.común')
+
+# lets take only the variableswe need in the other dataframe
+HojasMP10<-HojaMP10[c(1,2)]
+HojasMP10$Tipo_Hoja<-HojaMP10$Tipo_Hoja
+colnames(HojasMP10)<-c('cHojaMP10','dcHojaMP10','Tipo_Hoja')
+
+HojasMP2.5<-HojaMP2.5[c(1,2)]
+HojasMP2.5$Tipo_Hoja<-HojaMP2.5$Tipo_Hoja
+colnames(HojasMP2.5)<-c('cHojaMP2.5','dcHojaMP2.5','Tipo_Hoja')
+
+# Now the merge of all this data.frames
+mergedAreas<-merge(x = d, y =pendientarea , by="Nombre.común")
+mergedAreas<-merge(x = mergedAreas, y =interceptarea , by="Nombre.común")
+mergedAreas<-merge(x = mergedAreas, y =HojasMP2.5 , by="Tipo_Hoja")
+mergedAreas<-merge(x = mergedAreas, y =HojasMP10 , by="Tipo_Hoja")
+
+# Now its time to do opperations with the columns and get a new column with the standard error of the total estimation for each model
+
+#lets start by defining all the deltas
+k_1 <- 0.0643
+k_2 <- 7.6109
+dk_1 <- 0.0081
+dk_2 <- 0.2355 # taken from Nowak, D. J. (1996). Estimating leaf area and leaf biomass of open-grown deciduous urban trees. Forest science, 42(4), 504-507.
+
+aMP10 <- summary(modelo_10)$coefficients[2,1]
+daMP10 <-summary(modelo_10)$coefficients[2,2]
+dbMP10 <- summary(modelo_10)$coefficients[1,2] 
+dcMP10  <-(dbMP10*exp( summary(modelo_10)$coefficients[1,1]))/0.434#db*e^b/0.434
+
+aMP2.5  <-summary(MP2.5)$coefficients[2,1]
+daMP2.5  <-summary(MP2.5)$coefficients[2,2]
+dbMP2.5 <- summary(MP2.5)$coefficients[1,2] 
+dcMP2.5  <-(dbMP2.5*exp( summary(MP2.5)$coefficients[1,1]))/0.434#db*e^b/0.434
+
+##Lets create all the formulas with the values and columns
+times<-c()
+for (j in 1:length(mergedAreas$Diametro)){ 
+  W <- mergedAreas$Diametro[j]
+  if (grepl("/", W, fixed=TRUE)== TRUE){
+   times<-c(times,lengths(gregexpr("/", W)) + 1)
+  }
+  else if (grepl("-", W, fixed=TRUE)==TRUE){
+    times<-c(times,lengths(gregexpr("-", W)) + 1)
+  }
+}# times is how many diameters measured are in one individual
+
+dDAP<-(0.1/pi)*sqrt(times)# This is the error of the meter
+DAP<-((log(mergedAreas$pred_area/mergedAreas$a_e)-k_2))/k_1
+dNsobreN<-(1/0.434)*sqrt((dk_1/k_1)**2+(dk_2)**2+(dDAP/DAP)**2)
+M<-mergedAreas$a_e*exp(k_1*DAP+k_2)
+dM<-sqrt(M**2*((mergedAreas$da_e/mergedAreas$a_e)**2+(dNsobreN)**2))
+dA<-sqrt(mergedAreas$b_e**2 + dM**2)
+
+QMP2.5<-aMP2.5*log(mergedAreas$pred_area)
+dQMP2.5<-QMP2.5**2 *(aMP2.5/daMP2.5+(0.434*dA/(mergedAreas$pred_area*log(mergedAreas$pred_area))))
+
+QMP10<-aMP10*log(mergedAreas$pred_area)
+dQMP10<-QMP10**2 *(aMP10/daMP10+(0.434*dA/(mergedAreas$pred_area*log(mergedAreas$pred_area))))
+
+
+Sigma_MP2.5<-(mergedAreas$MP2.5_tot/0.434)*sqrt(dcMP2.5**2 +dQMP2.5**2+mergedAreas$dcHojaMP2.5**2)
+Sigma_MP10<-(mergedAreas$MP10_tot/0.434)*sqrt(dcMP10**2 +dQMP10**2+mergedAreas$dcHojaMP10**2)
+
+#Now to concatenate the final error to the dtaaframe we have:
+mergedAreas$Sigma_MP2.5 <- Sigma_MP2.5
+mergedAreas$Sigma_MP10 <- Sigma_MP10
+
+cat('    El error de PM10 y pm2.5 respectivamente es:  ',sum(mergedAreas$Sigma_MP10,na.rm=TRUE),'g y ',sum(mergedAreas$Sigma_MP2.5,na.rm=TRUE))
+
+
 
 ```
